--- a/blogfront/package.json
+++ b/blogfront/package.json
@@ -8,7 +8,10 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-native-hyperlink": "0.0.12",
-    "react-scripts": "1.1.0"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
