--- a/blogfront/package.json
+++ b/blogfront/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.17.1",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-native-hyperlink": "0.0.12",
     "react-redux": "^5.0.7",
