--- a/blogfront/package.json
+++ b/blogfront/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
