--- a/blogfront/package.json
+++ b/blogfront/package.json
@@ -13,17 +13,21 @@
     "react-scripts": "^2.1.8",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2"
+    "enzyme-adapter-react-16": "^1.11.2",
+    "eslint": "^5.12.0",
+    "eslint-plugin-react": "^7.12.4"
   },
   "browserslist": [
     ">0.2%",
